practice/notes/notes.txt
D:\core java\practice\day 2\src>javac -d ../bin B.java
B.java:6: error: class C is public, should be declared in a file named C.java
 public class C{
        ^
1 error

D:\core java\practice\day 2\src>



multiple class with public does not work 
ЁЯСЙ рдПрдХ .java file = рдЬрд╛рд╕реНрддреАрдд рдЬрд╛рд╕реНрдд 1 public class
рдЖрдгрд┐ рддреНрдпрд╛ public class рдЪреЗ рдирд╛рд╡ рдЖрдгрд┐ file рдирд╛рд╡ exact match рдЕрд╕рд╛рдпрд▓рд╛ рдкрд╛рд╣рд┐рдЬреЗ.